<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mycoolcontrol.com.mycoolcontrol.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start"
            android:text="@string/txt_start"/>

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_pause" />

        <Button
            android:id="@+id/btn_effect1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_effect1" />

        <Button
            android:id="@+id/btn_effect2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_effect2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_duration_msec"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edt_dur_msec"
            android:text="@string/txt_defautl_dur_msec"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_current_pos_msec"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_currentpos"/>
    </LinearLayout>

    <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:orientation="vertical"-->
        <!--android:id="@+id/myContainer">-->
        <!--<FrameLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="20dp"-->
            <!--android:id="@+id/myEffectViewContainer"-->
            <!--android:layout_marginTop="5dp">-->
        <!--</FrameLayout>-->
        <!--<SeekBar-->
            <!--android:id="@+id/sb_progress"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="30dp"-->
            <!--android:progressDrawable="@drawable/seekbar_drawable_progress"-->
            <!--android:thumb="@drawable/seekbar_drawable_thumb"-->
            <!--android:paddingStart="0dp"-->
            <!--android:paddingEnd="0dp"/>-->
    <!--</FrameLayout>-->

    <com.mycoolcontrol.view.MyCoolSeekBar
        android:id="@+id/mySeekBar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"/>
</LinearLayout>
